# StartHub

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  compose.yml  docker-compose.yml  entrypoint.prod.sh  naming_convention  nginx.conf  paypal.py  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  lint.yml  main.yml  workflow.yml
starthub/: manage.py
starthub/application/draft/: company.py
starthub/application/dto/: auth.py  news.py  project.py  user.py
starthub/application/ports/: app_service_factory.py  cookie_service.py  domain_service_factory.py  service.py  service_factory.py
starthub/application/service_factories/: auth.py  company.py  project.py  user.py  user_favorite.py
starthub/application/services/: auth.py  company.py  gateway.py  news.py  project.py  user.py  user_favorite.py
starthub/application/utils/: get_access_payload_dto.py
starthub/config/: settings.py  urls.py
starthub/domain/: admin.py  constants.py
starthub/domain/enums/: permission.py  project_stage.py  project_status.py  role.py  social_links.py  token.py
starthub/domain/exceptions/: __init__.py  auth.py  cloud_storage.py  company.py  country.py  file.py  funding_model.py  image.py  news.py  permissions.py  project.py  project_category.py  project_management.py  project_phone.py  project_social_link.py  repository.py  team_member.py  user.py  user_favorite.py  validation.py
starthub/domain/migrations/: 0001_initial.py  0002_alter_user_options.py  0002_remove_company_description_and_more.py  0002_remove_user_username_user_first_name_user_last_name.py  0003_country_fundingmodel_projectcategory_company_and_more.py  0003_user_picture_alter_user_password.py  0003_userfavorite.py  0004_alter_userfavorite_table_projectphoto.py  0004_project_stage.py  0005_alter_user_first_name_alter_user_last_name.py  0005_companyfounder_company_founder.py  0005_rename_projectphoto_projectimage_and_more.py  0006_project_plan.py  0006_projectimage_order.py  0007_alter_company_established_date.py  0007_merge_20250615_2050.py  0008_alter_company_founder.py  (+9 more)
starthub/presentation/: constants.py  ports.py
starthub/setup/: apps.py  signals.py
(+161 files in other folders)
